# react-native-nitro-zlib

./: .gitignore  .npmignore  README.md  README_zh.md  RNZlib.podspec  nitro.json  package.json  tsconfig.json
android/: CMakeLists.txt  OnLoad.cpp  build.gradle  gradle.properties
android/src/main/java/com/margelo/nitro/nitro_zlib/: NitroZlibPackage.kt
cpp/: HybridZlib.cpp  HybridZlib.hpp  HybridZlibStream.cpp  HybridZlibStream.hpp
ios/Frameworks/RNZlib.xcframework/: Info.plist
ios/Frameworks/RNZlib.xcframework/ios-arm64/RNZlib.framework/: Info.plist  RNZlib
ios/Frameworks/RNZlib.xcframework/ios-arm64_x86_64-simulator/RNZlib.framework/: RNZlib
ios/Frameworks/RNZlib.xcframework/ios-arm64_x86_64-simulator/RNZlib.framework/Headers/: zlib_ffi.h
src/: NitroZlib.nitro.ts  index.ts  stream.ts
